Clean up the css some

--- a/src/components/Header/Components/menu.scss
+++ b/src/components/Header/Components/menu.scss
@@ -9,5 +9,7 @@
   // border-top: solid 4px $blue;
   box-shadow: 0 1px 0 0 rgba(0,0,0,.1), 1px 0 0 0 rgba(0,0,0,.1), -1px 0 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
   min-width: 10rem;
+}
+.menu-content-container {
   padding: 1rem;
 }
