--- a/src/App.scss
+++ b/src/App.scss
@@ -6,5 +6,6 @@ $fa-font-path: "~font-awesome/fonts";
 
 @import "~@edx/paragon/src/SearchField/SearchField";
 
+@import "~@edx/frontend-component-footer/src/lib/scss/site-footer";
+
 @import "./components/Gradebook/gradebook";
-@import "./components/Gradebook/footer";
