--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -3,6 +3,7 @@
     height: 100%;
     width: 100%;
     top: 0;
+    left: 0;
     background-color: #999;
     opacity: 0.5;
     z-index: 99999;
@@ -30,6 +31,10 @@
 
     .search-help-text {
         margin-left: 20px;
+    }
+    h4 {
+        font-weight: bold;
+        margin-top: 2rem;
     }
 }
 
@@ -125,4 +130,9 @@
 
 .modal-dialog {
     max-width: 1000px;
+}
+
+.original-filename {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
