--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -17,18 +17,10 @@
     color: black;
 }
 
-.gradebook-container{
-    width: 500px;
-    @media only screen and (min-width: 640px) {
-        width: 630px;
-    }
-    @media only screen and (min-width: 992px) {
-        width: 900px;
-    }
-    @media only screen and (min-width: 1200px) {
-        width: 1024px;
-    }
-
+.gradebook-content {
+    // note that this width isn't well-abstracted from Drawer code.
+    // if we need to change it we may need to dig into those styles as well
+    width: 100vw;
     .search-help-text {
         margin-left: 20px;
     }
@@ -79,7 +71,8 @@
 
     .table {
         padding-left: 244px;
-
+        // prevents the table from shrinking to a width where "Final 01" breaks to two lines
+        min-width: 731px;
         th {
             vertical-align: top;
             font-size: 14px;
