Break table text line for long usernames as well
... as for file names

--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -129,7 +129,7 @@
     max-width: 1000px;
 }
 
-.original-filename {
+.wrap-text-in-cell {
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
