--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -84,24 +84,15 @@
     }
 
     .table tr th:first-child {
-        position: absolute;
-        width: 160px;
-        height: 50px;
-        display: block;
         border-bottom: none;
     }
+    .table tr th:first-child,
     .table tr td:first-child {
-        position: absolute;
+        position: sticky;
         width: 160px;
-        height: 50px;
-        display: block;
-    }
-    .table tr td:nth-child(2) {
-        box-sizing: content-box;
-        padding-left: 170px;
-    }
-    .table tr th:nth-child(2) {
-        padding-left: 170px;
+        left: 0;
+        z-index: 1; // to float over the following children in the side-scrolling case
+        background: white;
     }
 
     .table tbody th {
