--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -57,9 +57,17 @@
 .grade-history-current-grade{
     padding-right: 25px;
 }
+.gradebook-container {
+    width: 100%;
+    overflow-x: auto;
+    height: 600px;
+    overflow-y: auto;
+    word-break: break-word;
+    position: relative;
+}
 
 .gbook { 
-    overflow-x: scroll;
+    width: 100%;
 
     .grade-button {
         text-decoration: underline;
@@ -68,19 +76,25 @@
     .student-key {
         font-size: 14px;
     }
+    
 
-    .table {
-        padding-left: 244px;
-        // prevents the table from shrinking to a width where "Final 01" breaks to two lines
-        min-width: 731px;
-        th {
-            vertical-align: top;
-            font-size: 14px;
+    .table thead tr {
+        min-height: 60px;
+        &:nth-child(1) {
+          position: sticky;
+          top: 0;
+          z-index: 10;
+          background-color: white;
+          th {
+            background-color: white;
+            border-bottom: 1px solid $gray_200;
+          }
         }
     }
 
-    .table thead tr {
-        height: 60px;
+    thead, tbody, tr, td, th {
+      display: block;
+      word-break: break-word;
     }
 
     .table tr th:first-child {
@@ -89,14 +103,45 @@
     .table tr th:first-child,
     .table tr td:first-child {
         position: sticky;
-        width: 160px;
         left: 0;
         z-index: 1; // to float over the following children in the side-scrolling case
         background: white;
     }
 
+    .table tr {
+      th:nth-child(1),
+      td:nth-child(1),
+      th:nth-child(2),
+      td:nth-child(2) {
+        min-width: 240px;
+      }
+      th, td {
+        min-width: 120px;
+      }
+    }
     .table tbody th {
         font-weight: normal;
+    }
+
+    .table {
+      overflow-x: hidden;
+
+      height: 100%;
+
+      tbody {
+        overflow-y: auto;
+        display: block;
+      }
+
+      thead, tbody tr {
+        display: table;
+        table-layout: fixed;
+      }
+
+      th {
+          vertical-align: top;
+          font-size: 14px;
+      }
     }
 
     .link-style {
