fix column header width to static value

--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -113,10 +113,10 @@
       td:nth-child(1),
       th:nth-child(2),
       td:nth-child(2) {
-        min-width: 240px;
+        width: 240px;
       }
       th, td {
-        min-width: 120px;
+        width: 120px;
       }
     }
     .table tbody th {
