update theme to branding

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
-
-@import "~@edx/paragon/scss/edx/theme.scss";
+// frontend-app-*/src/index.scss
+@import "~@edx/brand/paragon/fonts";
+@import "~@edx/brand/paragon/variables";
+@import "~@edx/paragon/scss/core/core";
+@import "~@edx/brand/paragon/overrides";
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
@@ -10,4 +13,3 @@ $input-focus-box-shadow: $input-box-shadow; // hack to get upgrade to paragon 4.
 
 @import "./components/Gradebook/gradebook";
 @import "./components/Drawer/Drawer";
-
