--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,16 @@
 // frontend-app-*/src/index.scss
-@import "~@edx/brand/paragon/fonts";
-@import "~@edx/brand/paragon/variables";
-@import "~@edx/paragon/scss/core/core";
-@import "~@edx/brand/paragon/overrides";
+// @import "~@edx/brand/paragon/fonts";
+// @import "~@edx/brand/paragon/variables";
+// @import "~@edx/paragon/scss/core/core";
+// @import "~@edx/brand/paragon/overrides";
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
-$input-focus-box-shadow: $input-box-shadow; // hack to get upgrade to paragon 4.0.0 to work
+$input-focus-box-shadow: var(--pgn-elevation-form-input-focus) !default;
 
-@import "~@edx/frontend-component-header/dist/index";
-@import "~@edx/frontend-component-footer/dist/_footer";
+// @import "~@edx/frontend-component-header/dist/index";
+// @import "~@edx/frontend-component-footer/dist/_footer";
 
 @import "./components/GradesView/GradesView";
 @import "./components/BulkManagementHistoryView/BulkManagementHistoryView";
